REF-017 : Single & Multi Benchmark + 20000 dataset test